# cwipc_util

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  pointcloud-api.md  readme.md
.github/workflows/: build.yml
apps/cwipc_check/: CMakeLists.txt  cwipc_check.cpp
apps/cwipc_downsample/: CMakeLists.txt  cwipc_downsample.cpp
apps/cwipc_dump2ply/: CMakeLists.txt  cwipc_dump2ply.cpp
apps/cwipc_generate/: CMakeLists.txt  cwipc_generate.cpp
apps/cwipc_pcl2dump/: CMakeLists.txt  cwipc_pcl2dump.cpp
apps/cwipc_ply2dump/: CMakeLists.txt  cwipc_ply2dump.cpp
apps/cwipc_ply2dump_c/: CMakeLists.txt  cwipc_ply2dump_c.c
apps/cwipc_remove_outliers/: CMakeLists.txt  cwipc_remove_outliers.cpp
apps/cwipc_tilefilter/: CMakeLists.txt  cwipc_tilefilter.cpp
apps/cwipc_util_install_check/: CMakeLists.txt  cwipc_util_install_check.cpp
apps/cwipc_viewsynthetic/: CMakeLists.txt  cwipc_viewsynthetic.cpp
data/: CMakeLists.txt  readme.md
doc/: Doxyfile  target-a4.pages
doxygen/: Doxyfile
include/cwipc_util/: api.h  api_pcl.h  capturers.hpp  internal.h  vectors.h
include/cwipc_util/internal/: capturers.hpp  logging.hpp
python/: CMakeLists.txt  cwipc_find_dll_problems.py  cwipc_macos_clearquarantine.sh  cwipc_pymodules_install.bat  cwipc_pymodules_install.ps1  cwipc_pymodules_install.sh  cwipc_pymodules_install_win.bat  cwipc_tunnelproxy.sh  pyproject.toml  setup.py  test_cwipc_util.py  timing_tests.py
python/cwipc/: __init__.py  __main__.py  abstract.py  certh.py  codec.py  kinect.py  opengl.py  orbbec.py  playback.py  realsense2.py  util.py
python/cwipc/filters/: __init__.py  abstract.py  analyze.py  colorize.py  crop.py  direction.py  noise.py  passthrough.py  randomize_floor.py  remove_outliers.py  simulatecams.py  transform.py  transform44.py  voxelize.py
python/cwipc/io/: visualizer.py
python/cwipc/net/: abstract.py  netclient.py  netdecoder.py  peek_queue.py  sink_bin2dash.py  sink_encoder.py  sink_lldpkg.py  sink_netingest.py  sink_netserver.py  sink_passthrough.py  source_decoder.py  source_lldplay.py  source_netclient.py  source_passthrough.py  source_sub.py  source_synchronizer.py  subsource.py
python/cwipc/registration/: abstract.py  analyze.py  cameraconfig.py  coarse.py  compute.py  fine.py  multianalyze.py  multicamera.py  multicoarse.py  plot.py  util.py
python/cwipc/scripts/: _scriptsupport.py  cwipc_analyze_registration.py  cwipc_copy.py  cwipc_create_analysis_test.py  cwipc_find_transform.py  cwipc_forward.py  cwipc_grab.py  cwipc_join.py  cwipc_netserver.py  cwipc_play.py  cwipc_register.py  cwipc_test_aligner.py  cwipc_tilecolor.py  cwipc_timing.py  cwipc_toproxy.py  cwipc_view.py
python/cwipc/scripts/cwipc_calibrate/: __main__.py  abstract.py  calibrator.py  cameraconfig.py  filegrabber.py  livegrabber.py  pointcloud.py  targets.py  ui.py
python/cwipc/scripts/cwipc_gui/: __main__.py  cwipc_gui.ui  cwipc_gui_ui.py  tmp_regen_ui.sh  widgetCamtype.py  widgetCamtype.ui
python/examples/: CMakeLists.txt  compressfile.py  decompressfile.py  downsample.py  dump2ply.py  generate.py  ply2dump.py  readme.md  record.py  viewcamera.py  viewfile.py  viewrecording.py  viewsynthetic.py
src/: CMakeLists.txt  cwipc_capturer.cpp  cwipc_certh.cpp  cwipc_filters.cpp  cwipc_proxy.cpp  cwipc_synthetic.cpp  cwipc_util.cpp  cwipc_window.cpp  logging.cpp  window_util.cpp  window_util.hpp
tests/: CMakeLists.txt
