cmake_minimum_required(VERSION 3.16.0)
cmake_policy(SET CMP0074 NEW)

project(cwipc_util)

# We need glfw3 and OpenGL (only for cwipc_window())
find_package(glfw3 3.2)
if(NOT glfw3_FOUND)
	message(STATUS "glfw3: Use from third-party/glfw")
	add_subdirectory("third-party/glfw")
	include_directories("third-party/glfw/include")
endif()
find_package(OpenGL REQUIRED)

add_subdirectory("src")
add_subdirectory("apps/cwipc_util_install_check")
add_subdirectory("apps/cwipc_ply2dump")
add_subdirectory("apps/cwipc_ply2dump_c")
add_subdirectory("apps/cwipc_pcl2dump")
add_subdirectory("apps/cwipc_dump2ply")
add_subdirectory("apps/cwipc_generate")
add_subdirectory("apps/cwipc_viewsynthetic")
add_subdirectory("apps/cwipc_tilefilter")
add_subdirectory("apps/cwipc_downsample")
add_subdirectory("apps/cwipc_remove_outliers")
add_subdirectory("python")
add_subdirectory("tests")
