cmake_minimum_required(VERSION 3.16.0)
cmake_policy(SET CMP0074 NEW)

project(cwipc_util)

if(CWIPC_WITH_GUI)
    # We need glfw3 and OpenGL (only for cwipc_window())
    find_package(glfw3 3.2 REQUIRED)
    find_package(OpenGL REQUIRED)
endif()

add_subdirectory("src")
if(CWIPC_WITH_APPS)
    add_subdirectory("apps/cwipc_check")
    add_subdirectory("apps/cwipc_util_install_check")
    add_subdirectory("apps/cwipc_ply2dump")
    add_subdirectory("apps/cwipc_ply2dump_c")
    add_subdirectory("apps/cwipc_pcl2dump")
    add_subdirectory("apps/cwipc_dump2ply")
    add_subdirectory("apps/cwipc_generate")
    add_subdirectory("apps/cwipc_viewsynthetic")
    add_subdirectory("apps/cwipc_tilefilter")
    add_subdirectory("apps/cwipc_downsample")
    add_subdirectory("apps/cwipc_remove_outliers")
endif()
if(CWIPC_WITH_PYTHON)
add_subdirectory("python")
endif()
if(CWIPC_WITH_TESTS)
    add_subdirectory("tests")
endif()
if(CWIPC_WITH_DATA)
    add_subdirectory("data")
endif()
