[build-system]

requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]

name = "cwipc_util"
description="Python interface to cwipc libraries (ctypes-based)"
authors=[
    {name="Jack Jansen", email="Jack.Jansen@cwi.nl"}
]
dynamic = ["version"]
requires-python = ">= 3.11"
dependencies = [
    "numpy ~= 2.2", 
    "open3d ~= 0.19", 
    "pillow ~= 11.1", 
    "opencv-python ~= 4.10", 
    "scipy ~= 1.15", 
    "matplotlib ~= 3.10"
]

[project.scripts]

cwipc_grab = "cwipc.scripts.cwipc_grab:main"
cwipc_view = "cwipc.scripts.cwipc_view:main"
cwipc_register = "cwipc.scripts.cwipc_register:main"
cwipc_forward = "cwipc.scripts.cwipc_forward:main"
cwipc_toproxy = "cwipc.scripts.cwipc_toproxy:main"
cwipc_timing = "cwipc.scripts.cwipc_timing:main"

[tool.setuptools.packages.find]
exclude = ["build*"]
